--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="alert alert-success" role="alert">
+  <h4 class="text-shadow"><font color="#2B5035"><%= t('hi')%>!</font></h4>
+  <hr>
+  <p class="text-shadow"><%= t('precondition')%>.</p>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
