--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="text-center text-white fixed-bottom bg-light">
-<div class="text-center bg-light text-black p-3 ">
+<h4 class="text-center bg-light text-black p-3 ">
   © 2023 Copyright
-</div>
+</h4>
 </footer>
