--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="alert alert-success" role="alert">
-  <h4 class="text-shadow"><font color="#2B5035"><%= t('hi')%>!</font></h4>
+  <h3><%= t('greeting') %>!</h3>
   <hr>
-  <p class="text-shadow"><%= t('precondition')%>.</p>
+  <p class="text-shadow"><%= t('precondition') %>.</p>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
