--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,3 @@
-<footer class="text-center text-white fixed-bottom bg-light">
-<h4 class="text-center bg-light text-black p-3 ">
-  © 2023 Copyright
-</h4>
+<footer class="fixed-bottom bg-light">
+  <h6 class="p-3">© 2023 Copyright</h6>
 </footer>
