--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,11 @@
 <nav class="navbar navbar-expand-lg bg-light">
-<div class="container-fluid">
-<%= image_tag('header_img.png', draggable: "true", height: '45', width: '35') %>
-  <a class="navbar-brand home-link" href="/">Trainee Planner</a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <a class="nav-link" href="#">Link</a>
-
-        <div class="dropdown">
-          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><%= t('nav.language') %></button>
-          <ul class="dropdown-menu">
-            <li><%= link_to "Русский", {locale: :ru}, class: "dropdown-item"%></li>
-            <li><%= link_to "English", {locale: :en}, class: "dropdown-item"%></li>
-          </ul>
-        </div>
-    </ul>
-</div>
+  <div class="container-fluid">
+    <%= image_tag('header_img.png', draggable: "true", height: '45', width: '35') %>
+    <%= link_to "Trainee Planner", "/", class: "navbar-brand home-link text" %>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <%= link_to "Link", "/", class: 'nav-link text' %>
+          <%= render partial: 'layouts/locals' %>
+      </ul>
+  </div>
 </nav>
