--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,19 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= stylesheet_link_tag "styles", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "style", "data-turbo-track": "reload" %>
 
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
   <%= render partial: 'layouts/header' %>
-  <%= render partial: 'layouts/alert' %>
+
+  <%= render partial: 'layouts/flash_messages' %>
   <div class="container-fluid">
     <%= yield %>
   </div>
+
   <%= render partial: 'layouts/footer' %>
   </body>
 </html>
