--- a/app/assets/stylesheets/styles/buttons.css
+++ b/app/assets/stylesheets/styles/buttons.css
@@ -14,6 +14,7 @@
 }
 
 .btn-danger {
-    background-color: #df14bd !important;
-    border-color: #df14bd !important;
+    background-color: #eb497a !important;
+    border-color: #eb497a !important;
+    width: 100%;
 }
