--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -4,5 +4,5 @@
 
 <p><%= link_to t('user.change_password'), edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>t('user.ignore_email')</p>
-<p>t('user.create_new_password')</p>
+<p><%= t('user.ignore_email') %></p>
+<p><%= t('user.create_new_password') %></p>
