--- a/app/assets/stylesheets/styles/buttons.css
+++ b/app/assets/stylesheets/styles/buttons.css
@@ -3,6 +3,16 @@
     margin-bottom: 10px;
 }
 
+.btn-margin-top {
+    margin-top: 20px !important;
+}
+
+.btn-danger {
+    background-color: #eb497a !important;
+    border-color: #eb497a !important;
+    width: 100%;
+}
+
 .btn-group {
     margin-left: 10px;
     margin-top: 5px;
