--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TraineePlanner</title>
+    <title>Trainee planner</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= stylesheet_link_tag "style", "data-turbo-track": "reload" %>
-
+    <%= stylesheet_link_tag "styles", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
-
   <body>
   <%= render partial: 'layouts/header' %>
 
