--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -3,3 +3,5 @@
 @import "styles/error.css";
 @import "styles/text.css";
 @import "styles/notifications.css";
+@import "styles/links.css";
+@import "styles/dropdown.css";
