--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,12 +4,12 @@
     <%= link_to "Trainee Planner", "/", class: "navbar-brand home-link text" %>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <%= link_to "Link", "/", class: 'nav-link text' %>
           <%= render partial: 'layouts/locals' %>
-      </ul> 
+      </ul>
     </div>
+  </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" >
         <% if current_user %>
           <li class="nav-item"> <%= link_to "Edit Account", edit_user_registration_path, class: "nav-link" %></li>
           <li class="nav-item"> <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-small btn-primary mx-2" %></li>
