--- a/app/assets/stylesheets/styles/text.css
+++ b/app/assets/stylesheets/styles/text.css
@@ -4,6 +4,9 @@ a,
 em,
 h4,
 h6,
+span,
+th,
+td,
 .dropdown-item,
 .text {
     color: #8945C4 !important;
@@ -23,4 +26,14 @@ h3 {
 
 .nav-item {
     width: 110px !important;
+}
+
+.text-white {
+    color: white;
+}
+
+.nav-sm {
+    font-size: 15px !important;
+    text-align: center !important;
+    width: auto !important;
 }
