--- a/app/assets/stylesheets/styles/links.css
+++ b/app/assets/stylesheets/styles/links.css
@@ -2,3 +2,10 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+
+.link-group {
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 90%;
+}
