--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,27 +1,31 @@
-<div class="container p-4 min-vh-100 mb-4">
-  <h1 class="text-center mb-4"><%= t('event.events')%> </h1>
-  <div class="container mb-4">
-    <% if @events.empty? %>
-      <h2 class="text-center p-4">No Events</h2>
-    <%else%>
-      <table class="table table-borderless table-hover">
-        <tr class="text-center">
-          <th scope="col">#</th>
-          <th scope="col"><%= t('event.name') %></th>
-          <th scope="col"><%= t('event.category') %></th>
-          <th scope="col"><%= t('event.date') %></th>
-        </tr>
-        <% @events.each_with_index do |event, index| %>
-          <tr class="text-center">
-            <th scope="row">
-              <%= link_to index + 1, event_path(event.id, locale: I18n.locale) %>
-            </th>
-            <td><%= event.name %></td>
-            <td><%= event.category.name %></td>
-            <td><%= l(event.event_date, format: :default) %></td>
+<div class="higher-form">
+  <div class="border">
+    <h1 class="text-center mb-4"><%= t('event.events')%> </h1>
+    <div class="container mb-4">
+      <% if @events.empty? %>
+        <h2 class="text-center p-4"><%= t('event.no_events') %></h2>
+      <%else%>
+        <table class="table table-hover">
+          <tr>
+            <th class="bg-transparent">#</th>
+            <th class="bg-transparent"><%= t('event.name') %></th>
+            <th class="bg-transparent"><%= t('event.category') %></th>
+            <th class="bg-transparent"><%= t('event.date') %></th>
+            <th class="bg-transparent"><%= t('event.date_to_notificate') %></th>
           </tr>
-        <% end %>
-      </table>
-    <% end %>
-    <%= link_to 'Add', new_event_path, class: "btn btn-secondary" %>
+          <% @events.each_with_index do |event, index| %>
+            <tr onclick="location.href='<%= event_path(event.id, locale: I18n.locale) %>'">
+              <td class="bg-transparent"> <%= event.id %></td>
+              <td class="bg-transparent"><%= event.name %></td>
+              <td class="bg-transparent"><%= event.category.name %></td>
+              <td class="bg-transparent"><%= l(event.date, format: :default) %></td>
+              <td class="bg-transparent"><%= l(event.date_to_notificate, format: :default) %></td>
+            </tr>
+          <% end %>
+        </table>
+      <% end %>
+      <%= link_to t('event.create_new'), new_event_path, class: "btn btn-success text-white" %>
+      <div class='center'><%= paginate @events%></div>
+    </div>
   </div>
+</div>
