--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,17 +2,28 @@
   <div class="row ">
     <div class="col-sm-6 p-4">
       <h2><%= @event.name %></h2>
-      <p><%= @event.description %></p>
-      <div class="d-flex align-items-center mb-4">
-        <i class="me-auto"><%= @event.date.strftime("%Y-%m-%d %H:%M:%S") %></i>
-        <b><%= @event.category.name %></b>
-      </div>
-      <% if @event.date_to_notificate%>
-        <div class="mb-4">Remind <%= @event.date_to_notificate.strftime("%Y-%m-%d %H:%M:%S") %></div>
-      <% end %>
+      <table>
+        <p class="me-auto text">
+          <tr class="">
+            <td><%= t('event.date') %>:</td>
+            <td><%= @event.date.strftime("%Y-%m-%d %H:%M:%S") %></td>
+          </tr>
+          <tr>
+            <td><%= t('event.category') %>: </td>
+            <td><%= @event.category.name %></td>
+          </tr>
+          <% if @event.date_to_notificate%>
+            <tr>
+              <td><%= t('event.remind') %>: </td>
+              <td><%= @event.date_to_notificate.strftime("%Y-%m-%d %H:%M:%S") %></td>
+            </tr>
+          <% end %>
+        </p>
+      </table>
+      <p class="text mb-4"><%= @event.description %></p>
       <div class="col-sm-6 btns d-flex align-items-center">
-        <%=link_to "Edit", edit_event_path(@event.id), class: "btn btn-primary me-auto px-4" %>
-        <%=button_to "Delete", event_path(@event.id), method: :delete, class: "btn btn-danger" %>
+        <%=link_to t('event.edit'), edit_event_path(@event.id), class: "btn btn-secondary btn-short-width" %>
+        <%=button_to t('event.delete'), event_path(@event.id), method: :delete, class: "btn btn-danger" %>
       </div>
     </div>
   </div>
