--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,7 +6,7 @@
         <p class="me-auto text">
           <tr>
             <td class="wide-border"><%= t('event.date') %>:</td>
-            <td><%= @event.date.strftime("%Y-%m-%d %H:%M:%S") %></td>
+            <td><%= @event.event_date.strftime("%Y-%m-%d %H:%M:%S") %></td>
           </tr>
           <tr>
             <td class="wide-border"><%= t('event.category') %>: </td>
