--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,3 +1,7 @@
-<h1>New Category</h1>
+<div class="row align-items-center border-form">
+  <div class="border">
+    <h1><%= t('category.new_c') %></h1>
 
-<%= render "form", category: @category %>
+    <%= render partial: 'categories/form', locals: { category: @category, button: 'create' } %>
+  </div>
+</div>
