--- a/app/assets/stylesheets/styles/buttons.css
+++ b/app/assets/stylesheets/styles/buttons.css
@@ -1,7 +1,14 @@
 .btn-primary {
-    background-color: #8945C4 !important;
+    background-color: #8945C4;
     border-color: #8945C4 !important;
     width: 100%;
+}
+
+.btn-primary:hover,
+.btn-primary:active {
+    border-color: #ad68e9;
+    color: #8945C4 !important;
+    background-color: transparent;
 }
 
 .btn-position {
@@ -13,17 +20,35 @@
     margin-top: 20px !important;
 }
 
-.btn-delete {
-    background-color: #eb497a !important;
-    border-color: #eb497a !important;
-    color: #fff;
-    float: left
+.btn-success:hover,
+.btn-success:active {
+    background-color: transparent !important;
+    border-color: #ad68e9 !important;
+    color: #8945C4 !important;
 }
 
-.btn-edit {
-    background-color: #8945C4 !important;
-    border-color: #8945C4 !important;
-    color: #fff !important;
-    float: left;
-    margin-right: 10px;
+.btn-danger:hover,
+.btn-danger:active {
+    background-color: transparent !important;
+    border-color: #ad68e9 !important;
+    color: #8945C4 !important;
+}
+
+.btn-info:hover,
+.btn-info:active {
+    background-color: transparent !important;
+    border-color: #ad68e9 !important;
+    color: #8945C4 !important;
+}
+
+.btn-secondary:hover,
+.btn-secondary:active {
+    border-color: #ad68e9;
+    color: #8945C4 !important;
+    background-color: transparent;
+}
+
+.btn-secondary {
+    background-color: #8945C4;
+    color: white !important;
 }
