--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,20 +1,26 @@
-<h1>Categories</h1>
-<%= link_to "Create new", "/categories/new"%>
-<br><br>
-<ul>
-  <table border="0">
+<div class="list-categories">
+  <h1 class="text-center-70"><%= t('category.categories') %></h1>
+  <br>
+  <ul class="list-group list-group-flush" >
+
     <% @categories.each do |category| %>
-      <tr>
-        <th width="200px">
-          <h5 class="category"><%= category.name %></h5>
-        </th>
-        <th>
-          <%= link_to 'Edit', edit_category_path(category.id, locale: I18n.locale), class: "btn btn-edit" %>
-        </th>
-        <th>
-          <%= button_to 'Delete', category_path(category.id, locale: I18n.locale), method: :delete, class: "btn btn-delete"%>
-        </th>
-      </tr>
+      <li class="list-group-item">
+        <table>
+          <tr >
+            <th width="450px">
+              <h5 class="category"><%= category.name %></h5>
+            </th>
+            <th>
+              <%= link_to t('category.edit'), edit_category_path(category.id, locale: I18n.locale), class: "btn btn-info text-white" %>
+            </th>
+            <th>
+              <%= button_to t('category.delete'), category_path(category.id, locale: I18n.locale), method: :delete, class: "btn btn-danger text-white"%>
+            </th>
+          </tr>
+        </table>
+      </li>
     <% end %>
-  </table>
-</ul>
+
+  </ul>
+  <%= link_to t('category.create_new'), new_category_path, class: "btn btn-success text-white" %>
+</div>
