--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <%= link_to "Categories", "/categories"%>
+      <%= link_to t('category.categories'), categories_path, class: "btn btn-secondary" %>
     </div>
   </div>
 </nav>
