--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,14 @@
 <div class="list-categories">
   <h1 class="text-center-70"><%= t('category.categories') %></h1>
   <br>
-  <ul class="list-group list-group-flush" >
 
+  <ul class="list-group list-group-flush" >
+  <div class='center'>
+    <%= link_to "5", categories_path(per_page: 5, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
+    <%= link_to "10", categories_path(per_page: 10, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
+    <%= link_to "30", categories_path(per_page: 30, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
+    <%= link_to "40", categories_path(per_page: 40, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
+  </div>
     <% @categories.each do |category| %>
       <li class="list-group-item">
         <table>
@@ -20,7 +26,7 @@
         </table>
       </li>
     <% end %>
-
+    <div class='center'><%= paginate @categories%></div>
   </ul>
   <%= link_to t('category.create_new'), new_category_path, class: "btn btn-success text-white" %>
 </div>
