--- a/app/assets/stylesheets/styles/form.css
+++ b/app/assets/stylesheets/styles/form.css
@@ -18,11 +18,16 @@
     border-radius: 10px;
     padding: 20px;
     width: 100%;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
     margin-bottom: 90px;
+}
+
+.show-event {
+    width: 60% !important;
+}
+
+.index-events {
+    width: 70% !important;
+    margin-left: 15%;
 }
 
 .center {
@@ -39,6 +44,8 @@
     border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
 }
 
-.wide-border {
-    border-right: 10px solid transperent;
+.description {
+    max-width: 1000px !important;
 }
+
+.table {}
