--- a/app/assets/stylesheets/styles/text.css
+++ b/app/assets/stylesheets/styles/text.css
@@ -4,6 +4,7 @@ a,
 em,
 h4,
 h6,
+h5,
 span,
 th,
 td,
@@ -36,4 +37,8 @@ h3 {
     font-size: 15px !important;
     text-align: center !important;
     width: auto !important;
+}
+
+.independent-string {
+    padding-left: 20px !important;
 }
