--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,25 +1,33 @@
 <div class="higher-form">
-  <div class="border">
+  <div class="border index-events">
     <h1 class="text-center mb-4"><%= t('event.events')%> </h1>
     <div class="container mb-4">
       <% if @events.empty? %>
         <h2 class="text-center p-4"><%= t('event.no_events') %></h2>
       <%else%>
+      <%= link_to "5", events_path(per_page: 5, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
+      <%= link_to "10", events_path(per_page: 10, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
+      <%= link_to "20", events_path(per_page: 20, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
+      <%= link_to "30", events_path(per_page: 30, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
         <table class="table table-hover">
           <tr>
             <th class="bg-transparent">#</th>
-            <th class="bg-transparent"><%= t('event.name') %></th>
-            <th class="bg-transparent"><%= t('event.category') %></th>
-            <th class="bg-transparent"><%= t('event.date') %></th>
-            <th class="bg-transparent"><%= t('event.date_to_notificate') %></th>
+            <th class="bg-transparent"><%= t('event.name')%></th>
+            <th class="bg-transparent"><%= t('event.category')%></th>
+            <th class="bg-transparent"><%= t('event.event_date')%></th>
+            <th class="bg-transparent"><%= t('event.date_to_notificate')%></th>
           </tr>
           <% @events.each_with_index do |event, index| %>
             <tr onclick="location.href='<%= event_path(event.id, locale: I18n.locale) %>'">
               <td class="bg-transparent"> <%= event.id %></td>
               <td class="bg-transparent"><%= event.name %></td>
               <td class="bg-transparent"><%= event.category.name %></td>
-              <td class="bg-transparent"><%= l(event.date, format: :default) %></td>
-              <td class="bg-transparent"><%= l(event.date_to_notificate, format: :default) %></td>
+              <td class="bg-transparent"><%= event.event_date.strftime("%Y-%m-%d %H:%M:%S") %></td>
+              <% if event.date_to_notificate %>
+                <td class="bg-transparent"><%= event.date_to_notificate.strftime("%Y-%m-%d %H:%M:%S") %></td>
+              <% else %>
+                <td class="bg-transparent"></td>
+              <% end %>
             </tr>
           <% end %>
         </table>
