--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
-<% if current_user %>
-  <%= render partial: 'user_events_status' %>
-<% else %>
-  <%= render partial: 'greeting' %>
-<% end %>
+<div class="alert alert-success" role="alert">
+  <h3><%= t('greeting') %>!</h3>
+  <hr>
+  <p class="text-shadow"><%= t('precondition') %>.</p>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
