--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,21 +1,18 @@
 <div class="higher-form">
   <div class="border index-events">
-    <h1 class="text-center mb-4"><%= t('event.events')%> </h1>
+    <h1 class="text-center mb-4"><%= t('event.events') %> </h1>
     <div class="container mb-4">
       <% if @events.empty? %>
         <h2 class="text-center p-4"><%= t('event.no_events') %></h2>
-      <%else%>
-      <%= link_to "5", events_path(per_page: 5, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
-      <%= link_to "10", events_path(per_page: 10, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
-      <%= link_to "20", events_path(per_page: 20, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
-      <%= link_to "30", events_path(per_page: 30, search: params[:search]), class: "btn btn-secondary btn-short-width"%>
+      <% else %>
+      <%= render partial: 'events/select_pagination' %>
         <table class="table table-hover">
           <tr>
             <th class="bg-transparent">#</th>
-            <th class="bg-transparent"><%= t('event.name')%></th>
-            <th class="bg-transparent"><%= t('event.category')%></th>
-            <th class="bg-transparent"><%= t('event.event_date')%></th>
-            <th class="bg-transparent"><%= t('event.date_to_notificate')%></th>
+            <th class="bg-transparent"><%= t('event.name') %></th>
+            <th class="bg-transparent"><%= t('event.category') %></th>
+            <th class="bg-transparent"><%= t('event.event_date') %></th>
+            <th class="bg-transparent"><%= t('event.date_to_notificate') %></th>
           </tr>
           <% @events.each_with_index do |event, index| %>
             <tr onclick="location.href='<%= event_path(event.id, locale: I18n.locale) %>'">
@@ -33,7 +30,7 @@
         </table>
       <% end %>
       <%= link_to t('event.create_new'), new_event_path, class: "btn btn-success text-white" %>
-      <div class='center'><%= paginate @events%></div>
+      <div class='center'><%= paginate @events %></div>
     </div>
   </div>
 </div>
