--- a/app/assets/stylesheets/styles/error.css
+++ b/app/assets/stylesheets/styles/error.css
@@ -1,7 +1,11 @@
 .error {
     color: #d11313 !important;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+.event-error {
+    height: 25px;
 }
