--- a/app/views/events/_error.html.erb
+++ b/app/views/events/_error.html.erb
@@ -1,3 +1,5 @@
-<% event.errors.full_messages_for(attribute).each do |message| %>
-  <div role="alert"><%= message %></div>
-<% end %>
+<div class="event-error">
+  <% event.errors.full_messages_for(attribute).each do |message| %>
+    <div role="alert" class="error"><%= message %></div>
+  <% end %>
+</div>
