--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -5,7 +5,7 @@
       <%= render "users/shared/error_messages", resource: resource %>
 
       <div class="field">
-        <%= f.label :email, class: 'text' %><br />
+        <%= f.label :email, class: 'text' %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
       </div>
       <br>
@@ -15,19 +15,19 @@
       <% end %>
 
       <div class="field">
-        <%= f.label :password, class: 'text' %><br />
+        <%= f.label :password, class: 'text' %>
         <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
       </div>
       <br>
 
       <div class="field">
-        <%= f.label :password_confirmation, class: 'text' %><br />
+        <%= f.label :password_confirmation, class: 'text' %>
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
       </div>
       <br>
 
       <div class="field">
-        <%= f.label :current_password, class: 'text' %><br/>
+        <%= f.label :current_password, class: 'text' %>
         <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
       </div>
       <br>
