--- a/app/assets/stylesheets/styles/form.css
+++ b/app/assets/stylesheets/styles/form.css
@@ -6,6 +6,7 @@
     margin-left: 35%;
     margin-right: 35%;
     max-width: 450px;
+    margin-bottom: 300px;
 }
 
 .higher-form {
@@ -54,6 +55,20 @@
 .description {
     max-width: 1000px !important;
 }
+
+.table {}
+
+.flash-alert {
+    min-width: 300px;
+    height: 53px;
+    text-align: center;
+    padding: 15px;
+    top: 600px;
+    left: 507px;
+    position: fixed;
+    bottom: 0;
+    margin: auto;
+    border-radius: 10px 10px 0px 10px;
 
 
 .list-group {
